--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -682,7 +682,7 @@ section {
   margin: 0 auto 25px auto;
   list-style: none;
   text-align: center;
-  background: #fff;
+  background: #1f2833;
   border-radius: 50px;
   padding: 2px 15px;
 }
@@ -695,7 +695,7 @@ section {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #272829;
+  color: #fff;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
