--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1569,3 +1569,18 @@ p.lead {
   bottom: 15px;
   right: 15px;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-menu {
+  position: absolute;
+  text-align: left;
+  /*background-color: #0b0c10; */
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  /*padding: 12px 16px; */
+  z-index: 1;
+}
