--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1584,3 +1584,23 @@ p.lead {
   /*padding: 12px 16px; */
   z-index: 1;
 }
+
+.noMargin {
+  margin: 0px;
+}
+
+.one {
+  background-color: red;
+}
+
+.two {
+  background-color: yellow;
+}
+
+.three {
+  background-color: green;
+}
+
+.four {
+  background-color: blue;
+}
